syntax = "proto3";

option go_package = "proto/accommodation_reserve_service";

package catalogue;

import "google/api/annotations.proto";

service accommodation_reserve_service{
        rpc Get(GetRequest) returns(GetResponse) {
        	option (google.api.http) = {
			get: "/catalogue/product/{id}"
		};
        }
        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	option (google.api.http) = {
			get: "/catalogue/product"
		};
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        Product product = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated Product products = 1;
}

message Product {
        string id = 1;
        string name = 2;
        string clothingBrand = 3;
        repeated Color colors = 4;
}

message Color {
        string code = 1;
        string name = 2;
}
